--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
 
+  <link rel="icon" type="image/png" href="https://d3js.org/favicon.png" sizes="400x400">
 </head>
 
 <body id="page-top">
